--- a/src/components/Card/index.css
+++ b/src/components/Card/index.css
@@ -3,7 +3,7 @@
     height: 400px;
     width: 400px;
     background-color: #252633;
-    border : 1px red solid;
+    border : 1px black solid;
     position: relative;
     flex-shrink: 0;
     flex-grow: 0;
@@ -25,4 +25,3 @@
     bottom:70px;
     left:0;
 }
-
