--- a/src/components/Characters/index.css
+++ b/src/components/Characters/index.css
@@ -3,7 +3,7 @@
 .CharactersContainer {
     background-color: #252633;
     display: flex;
-    flex-wrap: wrap;
-    /* overflow: scroll; */
+    /* flex-wrap: wrap; */
+    overflow: scroll;
 
 }
